# RI-Proyecto-G3

./: .gitignore  README.md
firmware_gateway/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
firmware_gateway/main/: CMakeLists.txt  config.h  idf_component.yml  main.c
firmware_nodo/: CMakeLists.txt  README.md
firmware_nodo/main/: CMakeLists.txt  config.h  espnow_handler.c  espnow_handler.h  idf_component.yml  main.c  mpu6050.c  mpu6050.h
firmware_nodo_OpenThread/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware_nodo_OpenThread/main/: CMakeLists.txt  config.h  esp_ot_config.h  main.c  openthread_handler.c  openthread_handler.h
firmware_nodo_ble/: CMakeLists.txt  sdkconfig.defaults
firmware_nodo_ble/main/: CMakeLists.txt  ble_handler.c  ble_handler.h  config.h  main.c  mpu6050.c
