idf_component_register(
    SRCS
        "main.c"
        "openthread_handler.c"
        "mpu6050.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_driver_i2c
        esp_driver_gpio
        esp_event
        esp_netif
        esp_timer
        freertos
        lwip
        nvs_flash
        openthread
        vfs
)
